<resources>
    <string name="app_name">Notepad</string>
    <string name="version_1_0">version 1.0</string>
    <string name="copyright">©2019.9.24, Jiaxin Dai</string>
    <string name="multinotes">multiNotes</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="title">title</string>
    <string name="time">time</string>
    <string name="overview">overview</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_aa">aa</string>

</resources>
